force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/mcdm_15__DM_Activity_Log__c.object-meta.xml
<CustomObject>
    <description>This Distributed Marketing object contains relevant metadata for sends through DM for selected sending flows. A single record will be created for every email and member on any injection into a marketing cloud journey. This object can be reported on and visualizations in the form of dashboards and reports can be created. Metadata included will give information around send type, recipient information, sender information, and activity (email, SMS) information. See individual field descriptions or Distributed Marketing Help and Training for more information.</description>
    <label>DM Activity Log</label>
    <nameField>
        <displayFormat>DMAL-{0000000000}</displayFormat>
        <label>DM Activity Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DM Activity Log</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>