force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Bulk_Send_Job__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Bulk_Send_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Bulk Send Job if this activity was triggered by a bulk send job.</description>
    <inlineHelpText>このアクティビティをトリガした一括送信ジョブを示します。</inlineHelpText>
    <label>Bulk Send Job</label>
    <referenceTo>mcdm_15__Bulk_Send_Job__c</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>