force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Bulk_Send_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Bulk_Send_Job_ID__c</fullName>
    <description>ID of the bulk send job, saved in the event the Bulk Send Job lookup is deleted.</description>
    <inlineHelpText>検索が削除されている場合は一括送信ジョブを示します。</inlineHelpText>
    <label>Bulk Send Job ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>