force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Campaign__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Campaign if this activity was related to a campaign sending flow.</description>
    <inlineHelpText>アクティビティがキャンペーン送信フローに関連するかどうかを示します。</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>