force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Campaign_ID__c</fullName>
    <description>ID of the campaign, saved in the event the campaign lookup is deleted.</description>
    <inlineHelpText>検索が削除されている場合はキャンペーンを示します。</inlineHelpText>
    <label>Campaign ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>