force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Case__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Case object if this activity was related to a quick send from Case.</description>
    <inlineHelpText>このアクティビティがクイック送信アクティビティに関連していた場合、このアクティビティに関連付けられたケースオブジェクト。</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Log</relationshipName>
    <type>Lookup</type>
</CustomField>