force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__DM_Scheduled_Send__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Scheduled_Send__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the DM Scheduled Send if this activity was related to a scheduled sending flow.</description>
    <inlineHelpText>アクティビティが DM スケジュール済み送信フローに関連するかどうかを示します。</inlineHelpText>
    <label>DM Scheduled Send</label>
    <referenceTo>mcdm_15__ScheduledSend__c</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>