force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__DM_Scheduled_Send_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Scheduled_Send_ID__c</fullName>
    <description>ID of the DM Scheduled Send, saved in the event the DM Scheduled Send, lookup is deleted.</description>
    <inlineHelpText>アクティビティに関連付けられた DM スケジュール済み送信を示します。</inlineHelpText>
    <label>DM Scheduled Send ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>