force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__DM_Send_Type__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Send_Type__c</fullName>
    <description>The type of Distributed Marketing send.</description>
    <inlineHelpText>使用可能な組み合わせからの DM 送信種別を示します</inlineHelpText>
    <label>MCDM Send Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>mcdm_15__DM_Send_Type_Combinations</valueSetName>
    </valueSet>
</CustomField>