force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__DM_Submission_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Submission_ID__c</fullName>
    <description>ID of the DM Submission record saved in the event the DM submission lookup is deleted.</description>
    <inlineHelpText>アクティビティに関連する DM 申請レコードを示します。</inlineHelpText>
    <label>DM Submission ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>