force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Email_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Email_ID__c</fullName>
    <description>ID of the Marketing Cloud email activity.</description>
    <inlineHelpText>Marketing Cloud メールアクティビティを示します。</inlineHelpText>
    <label>Email ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>