force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Email_Name__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Email_Name__c</fullName>
    <description>Name of the Marketing Cloud email activity.</description>
    <inlineHelpText>Marketing Cloud メールアクティビティの名前。</inlineHelpText>
    <label>Email Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>