force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Has_Personalizations__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Has_Personalizations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity has DM personalizations applied to it.</description>
    <inlineHelpText>DM パーソナライズがこのアクティビティに適用されていることを示します。</inlineHelpText>
    <label>Has Personalizations</label>
    <type>Checkbox</type>
</CustomField>