force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Initial_Sender__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Initial_Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user that initiated the DM Send for this activity (may not match with Send From User).</description>
    <inlineHelpText>このアクティビティに関連する DM 送信を開始したユーザを示します。この値は [送信元ユーザ] 値と異なる場合があります。</inlineHelpText>
    <label>Initial Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DM_Activity_Log</relationshipName>
    <type>Lookup</type>
</CustomField>