force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Injected_Lead__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Injected_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the lead that was injected onto the journey.</description>
    <inlineHelpText>ジャーニーに挿入されたリードを示します。</inlineHelpText>
    <label>Injected Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>