force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Is_Approval__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity was sent through an Approvals flow.</description>
    <inlineHelpText>アクティビティが承認フローを通じて送信されたことを示します。</inlineHelpText>
    <label>Is Approval</label>
    <type>Checkbox</type>
</CustomField>