force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Is_Bulk_Send__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Bulk_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity was sent through a Bulk Send flow.</description>
    <inlineHelpText>アクティビティが一括送信フローを通じて送信されたことを示します。</inlineHelpText>
    <label>Is Bulk Send</label>
    <type>Checkbox</type>
</CustomField>