force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Is_Campaign_Send__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Campaign_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity was sent through a Campaign sending flow.</description>
    <inlineHelpText>アクティビティがキャンペーン送信フローを通じて送信されたことを示します。</inlineHelpText>
    <label>Is Campaign Send</label>
    <type>Checkbox</type>
</CustomField>