force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Is_Contact__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity was sent to a contact.</description>
    <inlineHelpText>アクティビティが取引先責任者に送信されたことを示します。</inlineHelpText>
    <label>Is Contact</label>
    <type>Checkbox</type>
</CustomField>