force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Is_List_View_Send__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_List_View_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity was sent through a List View Mass Action flow.</description>
    <inlineHelpText>アクティビティがリストビュー一括アクションフローを通じて送信されたことを示します。</inlineHelpText>
    <label>Is List View Send</label>
    <type>Checkbox</type>
</CustomField>