force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Is_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Person_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This quick send was sent from a person account.</description>
    <inlineHelpText>クイック送信が個人取引先から送信されたことを示します。</inlineHelpText>
    <label>Is Person Account Entry</label>
    <type>Checkbox</type>
</CustomField>