force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Journey_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Journey_ID__c</fullName>
    <description>ID of the Marketing Cloud Journey.</description>
    <inlineHelpText>Marketing Cloud ジャーニーを示します。</inlineHelpText>
    <label>Journey ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>