force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Journey_Name__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Journey_Name__c</fullName>
    <description>Name of the Marketing Cloud journey.</description>
    <inlineHelpText>Marketing Cloud ジャーニーの名前。</inlineHelpText>
    <label>Journey Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>