force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__MC_Journey_Version__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__MC_Journey_Version__c</fullName>
    <description>Version number of the Marketing Cloud Journey.</description>
    <inlineHelpText>Marketing Cloud ジャーニーのバージョンを示します。</inlineHelpText>
    <label>MC Journey Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>