force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Member_Phone__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Member_Phone__c</fullName>
    <description>Phone number of the member that was injected onto the journey.</description>
    <inlineHelpText>ジャーニーに挿入されたメンバーの電話番号。</inlineHelpText>
    <label>Member Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>