force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Member_Phone_Field_Used__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Member_Phone_Field_Used__c</fullName>
    <description>API Name of the phone number field used in this activity.</description>
    <inlineHelpText>このアクティビティで使用された電話番号フィールドの API 参照名。</inlineHelpText>
    <label>Member Phone Field Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>