force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Opportunity object if this activity was related to a quick send from Opportunity.</description>
    <inlineHelpText>クイック送信アクティビティに関連する商談オブジェクトを示します。</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Log</relationshipName>
    <type>Lookup</type>
</CustomField>