force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Opportunity_ID__c</fullName>
    <description>ID of the Opportunity record saved in the event the Opportunity lookup is deleted.</description>
    <inlineHelpText>このアクティビティに関連付けられた商談レコードを示します。</inlineHelpText>
    <label>Opportunity ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>