force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Quick_Send_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Quick_Send_Message_ID__c</fullName>
    <description>ID of the Quick Send Message record saved in the event the Quick Send Message lookup is deleted.</description>
    <inlineHelpText>このアクティビティに関連付けられたクイック送信メッセージレコードを示します。</inlineHelpText>
    <label>Quick Send Message ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>