force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Send_From_Setting__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Send_From_Setting__c</fullName>
    <description>Identifies the Send From Setting used for this activity (Running User or Record Owner).</description>
    <inlineHelpText>このアクティビティに使用された送信元設定を示します。</inlineHelpText>
    <label>Send From Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>mcdm_15__DM_Send_From_Settings</valueSetName>
    </valueSet>
</CustomField>