force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__SMS_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__SMS_ID__c</fullName>
    <description>ID of the Marketing Cloud SMS activity.</description>
    <inlineHelpText>Marketing Cloud SMS アクティビティを示します。</inlineHelpText>
    <label>SMS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>